--- a/Chapter_05a.tex
+++ b/Chapter_05a.tex
@@ -1,7 +1,7 @@
 \chapter{Self-reflective agents and L\"ob's Obstacle}
 	\label{CH_05}
 
-The work, however, is not finished. This dissertation made advances along these lines, but did not fully explore the new terrain. We took care to establish a static base logic with epistemic and doxastic operators that was realistic, and in particular distinguished our static base from those of \SFive\ and $\mathcal{S}4$, as seen in much of the rest of the epistemic logic literature. However, these logics, and our own static base logic, potentially suffer from a serious problem not explored in the present work.
+The work, however, is not finished. This dissertation made advances along these lines, but did not fully explore the new terrain. We took care to establish a static base logic with epistemic and doxastic operators that was realistic, and in particular distinguished our static base from those of \SFive and $\mathcal{S}4$, as seen in much of the rest of the epistemic logic literature. However, these logics, and our own static base logic, potentially suffer from a serious problem not explored in the present work.
 
 The potential problem is due to L\"ob in \cite{Lob}. We describe the problem here for future work. We note that the problem is under active investigation by researchers at the Machine Intelligence Research Institute\footnote{See their website at https://www.intelligence.org}, who kindly invited the author to a workshop introducing the problem. Some of there preliminary results on the problem are available on the footnoted website. They have named the problem L\"ob's Obstacle, or the L\"obian Obstacle. We describe it, and the problem it presents to modal logic of agency, including our own, below.
 
@@ -15,7 +15,7 @@ L\"ob's Theorem in provability logic is,
 	\Box(\Box\varphi \iimplies \varphi)\iimplies \Box\varphi.
 	\end{equation}
 \end{center}
-The $\Box$ is interpreted as ``provability" in some formal system, particularly one at least as powerful as Peano arithmetic. If a modal operator involves the reasoning abilities of a human-like agent, then \emph{a fortiori} it is a formal system at least as powerful as Peano arithmetic. This presents the following problem. If that agent, in its own reasoning system, can deduce the soundness of its own system, then it's reasoning system is unsound. This is because $\varphi$ can be any formula, including $\bot$. The particular modal logic at risk, in our mind, is epistemic logic, or any doxastic logic with accurate reasoners.
+The $\Box$ is interpreted as ``provability" in some formal system, particularly one at least as powerful as Peano arithmetic. If a modal operator involves the reasoning abilities of a human-like agent, then \emph{a fortiori} it is a formal system at least as powerful as Peano arithmetic. This presents the following problem. If that agent, in its own reasoning system, can deduce the soundness of its own system, then its reasoning system is unsound. This is because $\varphi$ can be any formula, including $\bot$. The particular modal logic at risk, in our mind, is epistemic logic, or any doxastic logic with accurate reasoners.
 
 L\"ob identified the following conditions of a formal system that would allow derivation of his theorem (which we present in modal form).
 \begin{enumerate}
