wip: expand Lob's Obstacle ch

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -202,6 +202,9 @@
 	 	\bibitem{simpson}
 	 	Simpson, C.; Prusak, L. ``Troubles with Information Overload = Moving from Quantity to Quality in Information Provision." International Journal of Information Management 15 (1995): 413-425.
 	 	
+	 	\bibitem{smullyan}
+	 	Smullyan, R. ``Logicians who reason about themselves" In \emph{Proceedings of the 1986 conference on Theoretical aspects of reasoning about knowledge}, Morgan Kaufmann Publishers Inc., San Francisco (CA), 1986, 341–352.
+	 	
 	 	\bibitem{vonWright}
 	 	von Wright, G.H.. ``An Essay on Modal Logic." Amsterdam: North-Holland Publishing Company. 1951.
 	 	
