--- a/Chapter_05a.tex
+++ b/Chapter_05a.tex
@@ -1,5 +1,7 @@
-\chapter{Self-reflective agents and L\"ob's Obstacle}
+\chapter{L\"ob's Obstacle}
 	\label{CH_05}
+
+Thus far, the dynamic modal logic we have constructed and applied has followed closely the standard formalizations in the literature, departing primarily in how it deals with an agent's static knowledge. The static operator for an agent's belief remains $\mathit{KD}45$, as it is normally formalized in the literature. Our dynamic operators follow closely those defined in \cite{DEL} and \cite{PAL}, with the novel addition of a safety precondition to capture normative constraints on action in addition to logical constraints. The dissertation thus far, and the logics of knowledge and agency in the literature, ignore a problem facing agents of a certain reflexive type, identified by Smullyan in \cite{smullyan}. This chapter confronts the problem of reflexive reasoners facing modal logics of knowledge and agency, including \DASL. We respond with an adjustment to \DASL's static foundation so that the problem can be avoided, if the agents being modeled are reflexive reasoners.
 
 The work, however, is not finished. This dissertation made advances along these lines, but did not fully explore the new terrain. We took care to establish a static base logic with epistemic and doxastic operators that was realistic, and in particular distinguished our static base from those of \SFive and $\mathcal{S}4$, as seen in much of the rest of the epistemic logic literature. However, these logics, and our own static base logic, potentially suffer from a serious problem not explored in the present work.
 
