wip: preamble to lob chapter

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -205,6 +205,9 @@
 	 	\bibitem{smullyan}
 	 	Smullyan, R. ``Logicians who reason about themselves" In \emph{Proceedings of the 1986 conference on Theoretical aspects of reasoning about knowledge}, Morgan Kaufmann Publishers Inc., San Francisco (CA), 1986, 341–352.
 	 	
+	 	\bibitem{sep_prov_log}
+	 	Verbrugge, Rineke (L.C.) (5 April 2017). "Provability Logic". The Stanford Encyclopedia of Philosophy. Retrieved 18 June 2019.
+	 	
 	 	\bibitem{vonWright}
 	 	von Wright, G.H.. ``An Essay on Modal Logic." Amsterdam: North-Holland Publishing Company. 1951.
 	 	
