--- a/Chapter_05a.tex
+++ b/Chapter_05a.tex
@@ -1,15 +1,23 @@
 \chapter{L\"ob's Obstacle}
 	\label{CH_05}
 
-Thus far, the dynamic modal logic we have constructed and applied has followed closely the standard formalizations in the literature, departing primarily in how it deals with an agent's static knowledge. The static operator for an agent's belief remains $\mathit{KD}45$, as it is normally formalized in the literature. Our dynamic operators follow closely those defined in \cite{DEL} and \cite{PAL}, with the novel addition of a safety precondition to capture normative constraints on action in addition to logical constraints. The dissertation thus far, and the logics of knowledge and agency in the literature, ignore a problem facing agents of a certain reflexive type, identified by Smullyan in \cite{smullyan}. This chapter confronts the problem of reflexive reasoners facing modal logics of knowledge and agency, including \DASL. We respond with an adjustment to \DASL's static foundation so that the problem can be avoided, if the agents being modeled are reflexive reasoners.
+Thus far, the dynamic modal logic we have constructed and applied has followed closely the standard formalizations in the literature, departing primarily in how it deals with an agent's static knowledge. The static operator for an agent's belief remains $\mathit{KD}45$, as it is normally formalized in the literature. Our dynamic operators follow closely those defined in \cite{DEL} and \cite{PAL}, with the novel addition of a safety precondition to capture normative constraints on action in addition to logical constraints. The dissertation thus far, and the logics of knowledge and agency in the literature, ignore a problem facing agents of a certain reflective type, identified by Smullyan in \cite{smullyan}.\footnote{Smullyan refers to these as reflexive reasoners, but we use the term `reflective' in order to avoid ambiguity with the reflexive frame condition on worlds.} This chapter confronts the problem of reflective reasoners facing modal logics of knowledge and agency, including \DASL. We respond with an adjustment to \DASL's static foundation so that the problem can be avoided, if the agents being modeled are reflective reasoners.
 
-The work, however, is not finished. This dissertation made advances along these lines, but did not fully explore the new terrain. We took care to establish a static base logic with epistemic and doxastic operators that was realistic, and in particular distinguished our static base from those of \SFive and $\mathcal{S}4$, as seen in much of the rest of the epistemic logic literature. However, these logics, and our own static base logic, potentially suffer from a serious problem not explored in the present work.
+In Smullyan's, ``Logicians who reason about themselves," he considers epistemic problems related to undecidability results in mathematics. He identifies ``a complete parallelism between logicians who believe propositions and mathematical systems that prove propositions." In provability logic, the formula $\varphi \iiff \tlnot \Bels{i}\varphi$ expresses the G\"odel proposition, ``This proposition is not provable in system $i$." In a doxastic interpretation, the same formula expresses the reflective belief, ``agent $i$ does not believe this proposition." This means that for any doxastic or epistemic system, if the agents it models are reflective, then it must not have the theorem $\Bels{i}\varphi \iimplies \varphi$, under pain of contradiction. 
 
-The potential problem is due to L\"ob in \cite{Lob}. We describe the problem here for future work. We note that the problem is under active investigation by researchers at the Machine Intelligence Research Institute\footnote{See their website at https://www.intelligence.org}, who kindly invited the author to a workshop introducing the problem. Some of there preliminary results on the problem are available on the footnoted website. They have named the problem L\"ob's Obstacle, or the L\"obian Obstacle. We describe it, and the problem it presents to modal logic of agency, including our own, below.
+A \emph{reflective} agent is one that can form beliefs and knowledge about self-referential sentences and propositions. Such propositions are of the form $\varphi \iiff (\Bels{i}\varphi \iimplies \psi)$. The reflective proposition ``agent $i$ does not believe this proposition" is of that form, where $\psi$ is replaced with $\bot$ in the generic form. More specifically, an agent is \emph{reflective} just in case for every proposition $\psi$, there is a proposition $\varphi$ such that $\varphi \iimplies (\Bels{i}\varphi \iimplies \psi)$.
+
+The above uses the $\Bels{i}$ operator for belief, but just as easily we could have used $\Kns{i}$. The problem for epistemic logic is immediately apparent. Most humans are capable of reasoning about self-referential propositions, so a logic for human knowledge ought to include such propositions. However, with the Truth Axiom of the knowledge operator, this seems to yield inconsistency. It seems to yield the very same inconsistency that mathematical system $i$ would face if it could prove its own soundness.
+
+In what follows, we examine the mathematical logic that underpins this issue. Just as Smullyan identified the problem as one facing reflective reasoners with Axioms K and 4 and the Rule of Necessitation in \cite{smullyan}, L\"ob identified these same conditions as the ones that allow a mathematical system to derive his theorem in \cite{Lob}. We highlight the obstacle this presents to epistemic and doxastic logics, and show how to avoid it. We present a relaxed \DASL\ for reasoning about safety-critical information flow to reflective agents.
+
+%The work, however, is not finished. This dissertation made advances along these lines, but did not fully explore the new terrain. We took care to establish a static base logic with epistemic and doxastic operators that was realistic, and in particular distinguished our static base from those of \SFive\ and $\mathcal{S}4$, as seen in much of the rest of the epistemic logic literature. However, these logics, and our own static base logic, potentially suffer from a serious problem not explored in the present work.
+
+The potential problem is due to L\"ob in \cite{Lob} from the mathematical logic perspective, and Smullyan in \cite{smullyan} from the epistemic/doxastic logic perspective. Contemporary research in artificial intelligence foundations addresses the problem as it pertains to agents being confident in their own conclusions. See for example research at the Machine Intelligence Research Institute\footnote{See their website at https://www.intelligence.org}, who kindly invited the author to a workshop introducing him to the problem. Some of their preliminary results on the problem are available on the footnoted website. They have named the problem L\"ob's Obstacle, or the L\"obian Obstacle. We describe it, and the problem it presents to modal logic of agency, including our own, below.
 
 \section{L\"ob's Theorem}
 \label{sec:lob_section}
-L\"ob's Obstacle takes its name from Martin Hugo L\"ob, who answered one of L. Henkin's follow up questions to G\"odel's striking incompleteness theorems. The question was, \emph{what about formulas that assert their own provability, as opposed to unprovability?}\footnote{Not a direct quote.} L\"ob's response was as follows. A sufficiently powerful system, \emph{e.g.} Peano arithmetic, can prove that formulas asserting that their own provability implies that they are true only when Peano arithmetic actually proves the formula. It seems a little trivial. For formal systems capturing the reasoning of agents, it can lead to surprising results.
+L\"ob's Theorem takes its name from Martin Hugo L\"ob, who tackled a question of mathematical logic posed by Leon Henkin in the years following the results of G\"odel. Henkin asked what could be said of propositions asserting their own provability, as opposed to unprovability in the case of G\"odel sentences.\cite{sep_prov_log} L\"ob answered by showing that in a consistent system, proof that proof of a proposition implies that the proposition is true (soundness) only for propositions that are actually provable. This is surprising, because it generalizes G\"odel's Second Incompleteness Theorem: no formal system can prove its own soundness (as opposed to consistency).
 
 L\"ob's Theorem in provability logic is,
 \begin{center}~\label{lob}
